--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "autoprefixer": "^10.4.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.0"
+  },
+  "overrides": {
+    "glob": "^10.4.6"
   }
 }
 
